updated search feature to only display the 'no results found' when a search is made and no ingredients match the query

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -32,7 +32,7 @@ select {
 }
 
 .navbar a {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   text-decoration: none;
   color: black;
 }
@@ -170,4 +170,8 @@ select {
 .recipe-ingredients ul {
   list-style: none;
   padding: 0;
+}
+
+.list-of-recipes {
+  margin-top: 40px;
 }
